--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <nav class="nav">
     <a href="#" class="nav-brand">La <span>Ventana</span></a>
     <div class="nav-links">
-        <a href="#nosotros">Nosotros</a>
+        <a href="#nosotros">Nosotros</a><a href="carta.html">Carta</a>
         <a href="#horario">Horario</a>
         <a href="tel:+34942337035" class="nav-cta">📞 Reservar</a>
     </div>
